patch: fix left sidebar collapse width
better handle left sidebar widths; tweak collapse button left padding for larger touch area; format scss files using prettier rules

--- a/regulations/static/regulations/css/main.css
+++ b/regulations/static/regulations/css/main.css
@@ -13564,6 +13564,9 @@ body {
   width: 100%;
 }
 
+.match-sides[data-state=collapsed] {
+  flex: 0 0 32px;
+}
 @media (min-width: 768px) {
   .match-sides {
     flex: 0 0 275px;
@@ -14455,7 +14458,7 @@ aside.left-sidebar {
 }
 aside.left-sidebar[data-state=collapsed] {
   width: 1em;
-  padding: 1em;
+  padding: 0 1em 1em;
   scrollbar-width: none;
 }
 aside.left-sidebar[data-state=collapsed] div {
@@ -14596,7 +14599,6 @@ aside.left-sidebar li.active ul a.menu-section:hover {
   color: #a3e8ff;
   border: none;
   background: none;
-  margin-left: 24px;
   cursor: pointer;
   text-transform: uppercase;
   font-weight: 600;
@@ -14620,6 +14622,9 @@ aside.left-sidebar li.active ul a.menu-section:hover {
   display: inline-block;
   vertical-align: middle;
   line-height: 16px;
+}
+.toc-controls button[data-set-state=collapsed] {
+  padding-left: 40px;
 }
 .toc-controls button[data-set-state=expanded] {
   margin: 0 auto;
